# jsonasm-wasm

./: .gitignore  Cargo.toml  README.md
doc/: JsonLang.ts  recursos.md
doc/exponential/: chebyshev.js  cordic.lua  remez.sage
src/: assign_labels.rs  codegen.rs  collapse_expressions.rs  control_simplification.rs  cordic.rs  fixup_types.rs  jsonlang.rs  main.rs  polyfill_ops.rs  variable_analysis.rs
src/cordic/: cordic.lang.json  cordic_gen.js  cordic_polyfill.rs
test/: compiler_integration.test.js  main.ts  runcode.js
